# nwp500-python

./: .bandit  .gitignore  CHANGELOG.rst  CHANGES.md  CONTRIBUTING.rst  LIBRARY_EVALUATION.md  README.rst  nwp500_status.csv  package-lock.json  pyproject.toml  setup.cfg  setup.py  test_api_connectivity.py  tox.ini
.github/: RESOLVING_PR_COMMENTS.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.hypothesis/constants/: 05044b0e70ef42ab  13db13a7b2178134  1b534f211836d036  22cdb7ce598358e5  30373286342e9c2d  351307d9f52e5712  38e5a0ee4c20c2fa  3cd888b2fda940ce  3e41f6e2dac7d711  43960b0ace50254c  47db797441adc9da  523206edf9bd1235  67b0a8ccf18bf5d2  74e6edbaadef1e50  767fac7418bf21ee  7b14ae8dd875b280  7d39af6d962efa3c  89a580be14782398  8f1254dc32667f86  9e0fd89dbf206808  9eab8fc57863e41e  a3f229c898281d19  b00985cd3c10a1f8  b294530e090203ba  b5232deb51bddc9a  bd643e9276a6173b  c7a31c6dc0068cbd  ca0b70aa93535c1f  cd91fc95eade0457  d0ea67d716f83a90  dae78f4d97fdd43b  dcfcf6e03af72a1c  dfc00db7cf73d63c  e4b0f73ee49546d6
docs/: AUTO_RECOVERY.md  AUTO_RECOVERY_QUICK.md  DEVELOPMENT.rst  DEVICE_STATUS_FIELDS.rst  ERROR_CODES.rst  EVENT_ARCHITECTURE.rst  EVENT_EMITTER.rst  EVENT_QUICK_REFERENCE.rst  FIRMWARE_TRACKING.rst  MQTT_CLIENT.rst  MQTT_MESSAGES.rst  PROTOCOL_REFERENCE.md  conf.py  enumerations.rst  index.rst  installation.rst  openapi.yaml  quickstart.rst  requirements.txt
docs/api/: nwp500.rst
docs/development/: history.rst
docs/explanation/: advanced-features.rst  architecture.rst  index.rst
docs/guides/: advanced_features_explained.rst  command_queue.rst  device_maintenance.rst  energy_monitoring.rst  event_system.rst  home_assistant_integration.rst  mqtt_diagnostics.rst  reservations.rst  scheduling.rst  scheduling_features.rst  time_of_use.rst  unit_conversion.rst
docs/how-to/: auto-recovery.rst  diagnose-mqtt.rst  home-assistant.rst  index.rst  maintenance.rst  manage-units.rst  monitor-status.rst  optimize-tou.rst  queue-commands.rst  schedule-operation.rst  track-energy.rst
docs/project/: history.rst
docs/protocol/: data_conversions.rst  device_features.rst  device_status.rst  error_codes.rst  firmware_tracking.rst  mqtt_protocol.rst  quick_reference.rst  rest_api.rst
docs/python_api/: auth_client.rst  cli.rst  constants.rst  device_control.rst  events.rst  exceptions.rst  models.rst  mqtt_client.rst
docs/reference/: configuration.rst  enumerations.rst  index.rst  installation.rst
examples/: air_filter_reset_example.py  anti_legionella_example.py  api_client_example.py  authenticate.py  auto_recovery_example.py  combined_callbacks.py  command_queue_demo.py  demand_response_example.py  device_feature_callback.py  device_status_callback.py  device_status_callback_debug.py  energy_usage_example.py  error_code_demo.py  event_emitter_demo.py  exception_handling_example.py  mask.py  mqtt_client_example.py  mqtt_diagnostics_example.py  periodic_device_info.py  periodic_requests.py  power_control_example.py  recirculation_control_example.py  reconnection_demo.py  reservation_schedule_example.py  set_dhw_temperature_example.py  set_mode_example.py  simple_auto_recovery.py  simple_periodic_info.py  simple_periodic_status.py  test_api_client.py  test_mqtt_connection.py  test_mqtt_messaging.py  test_periodic_minimal.py  token_restoration_example.py  vacation_mode_example.py  water_program_reservation_example.py
scripts/: README.md  bump_version.py  diagnose_mqtt_connection.py  validate_version.py
tests/: conftest.py  test_api_helpers.py  test_auth.py  test_auth_session_lifecycle.py  test_bug_fixes.py  test_canonical_schedule.py  test_cli_basic.py  test_cli_commands.py  test_command_decorators.py  test_command_queue.py  test_device_capabilities.py  test_device_info_cache.py  test_events.py  test_exceptions.py  test_model_converters.py  test_models.py  test_mqtt_clean_session_resume.py  test_mqtt_client_init.py  test_mqtt_events.py  test_mqtt_hypothesis.py  test_mqtt_reconnection.py  test_mqtt_reconnection_storm.py  test_mqtt_reliability.py  test_multi_device.py  test_openei.py  test_protocol_correctness.py  test_public_api.py  test_reservations.py  test_temperature_converters.py  test_threading_model.py  test_token_storage.py  test_tou_api.py  test_tou_schedule.py  test_unit_switching.py  test_unit_system_process_wide.py  test_utility_modules.py
(+109 files in other folders)
